# hsdatalog

./: .gitignore  .stylish-haskell.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  default.nix  example.dot  hsdatalog.cabal  shell.nix  test.datalog
.nix/: disjoint-sets.nix  nixpkgs.nix  vector-circular.nix
src/: Datalog.hs
src/Datalog/: Cudd.hs  CycleEnumeration.hs  Elaboration.hs  Graph.hs  ID3.hs  Interpreter.hs  Pretty.hs  RelAlgebra.hs  Stratification.hs  Syntax.hs  TypeCheck.hs
test/: Main.hs
test/Test/: CycleEnumeration.hs
