cabal-version: 2.2
name:
  hsdatalog
version:
  0.1
synopsis:
  datalog
-- description:
-- bug-reports:
-- license:
-- license-file:        LICENSE
author:
  chessai
  taktoa
maintainer:
  chessai <chessai1996@gmail.com>
  taktoa <taktoa@gmail.com>
-- copyright:
-- category:
build-type:
  Simple
--extra-source-files:
--  CHANGELOG.md

library
  hs-source-dirs:
    src
  exposed-modules:
    Datalog
    Datalog.Cudd
    Datalog.Syntax
  build-depends:
    , base
    , cudd
    , containers
--    , disjoint-sets
    , extra
    , generic-lens >= 2.0.0.0
--    , generic-lens-core
--    , hashable
    , ilist
    , lens
    , megaparsec
    , mtl
    , parser-combinators
    , primitive
    , safe
    , text
    , transformers
    , vector
  default-language:
    Haskell2010
