cabal-version: 2.2
name:
  hsdatalog
version:
  0.1
synopsis:
  datalog
-- description:
-- bug-reports:
-- license:
-- license-file:        LICENSE
author:
  chessai
  taktoa
maintainer:
  chessai <chessai1996@gmail.com>
  taktoa <taktoa@gmail.com>
-- copyright:
-- category:
build-type:
  Simple
--extra-source-files:
--  CHANGELOG.md

common shared-properties
  default-language:
    Haskell2010
  build-depends:
    , base
    , containers
    , extra
    , generic-lens >= 2.0.0.0
    , ilist
    , lens
    , mtl
    , primitive
    , safe
    , text
    , transformers
    , vector

library
  import:
    shared-properties
  hs-source-dirs:
    src
  exposed-modules:
    Datalog
    Datalog.Cudd
    Datalog.CycleEnumeration
    Datalog.Elaboration
    Datalog.Graph
    Datalog.Pretty
    Datalog.RelAlgebra
    Datalog.Stratification
    Datalog.Syntax
    Datalog.TypeCheck
  build-depends:
    , cudd
    , hmatrix
    , megaparsec
    , parser-combinators
    , MonadRandom
    , vector-circular

test-suite test
  import:
    shared-properties
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Main.hs
  other-modules:
    Test.CycleEnumeration
  build-depends:
    , hedgehog
    , hsdatalog
    , tasty
    , tasty-hedgehog
    , tasty-hunit

