cabal-version: 2.2
name:
  hsdatalog
version:
  0.1
synopsis:
  BDD-based implementation of Datalog
description:
  A compiler from Datalog to relational algebra, as well as an interpreter for relational algebra
  that uses binary decision diagrams (BDDs).
bug-reports:
  https://github.com/chessai/hsdatalog/issues
license:
  Apache-2.0
license-file:
  LICENSE
author:
  chessai
  taktoa
maintainer:
  chessai <chessai1996@gmail.com>
  taktoa <taktoa@gmail.com>
copyright:
  Copyright 2020 chessai, Google
category:
  Compiler, Database, Logic Programming
build-type:
  Simple
extra-source-files:
  CHANGELOG.md

common shared-properties
  default-language:
    Haskell2010
  build-depends:
    , base >= 4.11 && < 4.15
    , containers >= 0.5.9 && < 0.7
    , datasets >= 0.4 && < 0.5
    , extra >= 1.6 && < 1.7
    , generic-lens >= 2.0 && < 2.1
    , ilist >= 0.4 && < 0.5
    , lens >= 4.18 && < 4.20
    , mtl >= 2.2 && < 2.4
    , primitive >= 0.6.4 && < 0.8
    , safe >= 0.3 && < 0.4
    , text >= 1.2 && < 1.3
    , transformers >= 0.5.6 && < 0.6
    , vector >= 0.12 && < 0.13

library
  import:
    shared-properties
  hs-source-dirs:
    src
  exposed-modules:
    Datalog
    Datalog.Cudd
    Datalog.CycleEnumeration
    Datalog.Elaboration
    Datalog.Graph
    Datalog.ID3
    Datalog.Pretty
    Datalog.RelAlgebra
    Datalog.Stratification
    Datalog.Syntax
    Datalog.TypeCheck
  build-depends:
    , cudd >= 0.1 && < 0.2
    , hmatrix >= 0.20 && < 0.21
    , megaparsec >= 8.0 && < 8.1
    , parser-combinators >= 1.2 && < 1.3
    , MonadRandom >= 0.5 && < 0.6
    , vector-circular >= 0.1 && < 0.2

test-suite test
  import:
    shared-properties
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Main.hs
  other-modules:
    Test.CycleEnumeration
  build-depends:
    , hedgehog
    , hsdatalog
    , tasty
    , tasty-hedgehog
    , tasty-hunit

source-repository head
  type:
    git
  location:
    https://github.com/chessai/hsdatalog
